1999-02-04  Martin Baulig  <martin@home-of-linux.org>

	* aclocal-include.m4 (INSIDE_GNOME_COMMON): New automake
	conditional that's always false.

	* gnome-common.m4: New file. This defines a `GNOME_COMMON_INIT'
	macro that should be used in all GNOME Applications outside
	the CVS tree.

	* Makefile.am: If we are `INSIDE_GNOME_COMMON', install all
	$(MACROS), autogen.sh, gnome-common.m4 and a newly created
	gnome-macros.dep in `$(datadir)/aclocal/gnome'.

Sun Jan 24 03:59:32 1999  Timur Bakeyev <mc@bat.ru>

	* gnome-pthread-check.m4: Add recognition of 2 more libraries - 
	pthreads and pthread-support build in libc (as on BSDI).

1999-01-23  Martin Baulig  <martin@home-of-linux.org>

	* gnome-libgtop-checks.m4 (GNOME_LIBGTOP_DOCU): New macro. This
	checks whether you have the LibGTop documentation installed and
	defines `HAVE_LIBGTOP_DOCU' if appropriate. Also provides automake
 	conditional.

1999-01-20  Martin Baulig  <martin@home-of-linux.org>

	* acinclude.m4 (ac_result): Unset CATOBJEXT so
	that the macros and Makefiles correctly handle
	disabling NLS when no gettext is found.

1999-01-19  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-cxx-check.m4 (GNOME_CHECK_CXX): Rewrite to be saner.  
	Don't limit yourself to a fixed set of names for the compiler.

1999-01-06 Nat Friedman   <nat@nat.org>

	* Makefile.am (MACROS): Added gnome-print-check.m4 to MACROS

1999-01-05  Raja R Harinath  <harinath@cs.umn.edu>

	* gnome-support.m4: Include dirent.h before checking whether
	`scandir' needs to be declared.
	* need-declaration.m4: Revert change.

1999-01-05  Miguel de Icaza  <miguel@nuclecu.unam.mx>

	* need-declaration.m4, gnome-support.m4: Fixed the scandir detection.

1998-12-22  Jeff Garzik  <jgarzik@pobox.com>

	* gnome.m4:  Added and exported GNOME_APPLET_LIBS.

1998-12-16  Sebastian Wilhelmi  <wilhelmi@ira.uka.de>

	* gnome-support.m4: Removed all the stuff for argp, that was
	causing gnomesupport not to build.
