@@ -1,3 +1,10 @@
+1999-02-05  Martin Baulig  <martin@home-of-linux.org>
+
+	* compiler-flags.m4: Don't add warning and compiler flags to
+	the CFLAGS and CXXFLAGS when they're cached. This fixes the
+	problem that CFLAGS and CXXFLAGS get longer and longer each
+	time you run a `config.status --recheck'.
+
 1999-02-04  Martin Baulig  <martin@home-of-linux.org>
 
 	* aclocal-include.m4 (INSIDE_GNOME_COMMON): New automake
